Update MV-Painter with custom modifications and add gitignore for generated content

--- a/.gitignore
+++ b/.gitignore
@@ -11,11 +11,22 @@ ossutil_output
 mvpainter/custom_rasterizer/build/
 mvpainter/differentiable_renderer/dist/
 
-# *.png
-*.glb
-*.pyc
+# Generated models and outputs
+MVPainter/generated_models/
 
+# Build artifacts
+*.egg-info/
+build/
+dist/
 *.so
 *.o
+
+# Python cache
+__pycache__/
+*.pyc
+*.pyo
+
+# *.png
+*.glb
 
 
